--- a/.gitignore
+++ b/.gitignore
@@ -119,5 +119,8 @@ all.config
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
-# Qualcomm out-of-tree audio drivers
-#/techpack/audio
+# Object directory
+out/
+
+# Downloaded toolchains
+toolchains/
