--- a/.gitignore
+++ b/.gitignore
@@ -119,8 +119,5 @@ all.config
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
-# Object directory
-out/
-
-# Downloaded toolchains
-toolchains/
+# Qualcomm out-of-tree audio drivers
+#/techpack/audio
