force enable   WLAN_FEATURE_11W to avoid wlan driver build failure
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/drivers/staging/qcacld-3.0/Kconfig
+++ b/drivers/staging/qcacld-3.0/Kconfig
@@ -23,7 +23,7 @@ config PRIMA_WLAN_11AC_HIGH_TP
 
 config WLAN_FEATURE_11W
 	bool "Enable the WLAN 802.11w Protected Management Frames feature"
-	default n
+	default y
 
 config WLAN_FEATURE_LPSS
 	bool "Enable the WLAN LPSS feature"
