bonito sargo:  Enable display power-saving features based in Sultan implementation for Bluecross
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/arch/arm64/boot/dts/google/sdm670-b4s4-common.dtsi
+++ b/arch/arm64/boot/dts/google/sdm670-b4s4-common.dtsi
@@ -51,6 +51,10 @@
 #include "../qcom/smb1355.dtsi"
 };
 
+&mdss_dsi_phy0 {
+	qcom,panel-allow-phy-poweroff;
+};
+
 &ufsphy_mem {
 	compatible = "qcom,ufs-phy-qmp-v3";
 
